# MARK

./: LICENSE  README.md  pyproject.toml  requirements.txt
mark_cli/: config.py  main.py
mark_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mark_cli/memory/: __init__.py
mark_cli/providers/: __init__.py  base.py  gemini.py  groq.py  local_gguf.py  ollama.py
mark_cli/ui/: __init__.py  components.py  interface.py  performance.py
scripts/: check_available_models.py  debug_compound_empty_response.py  debug_groq_stream.py  debug_memories.py  diagnostic.py  verify_async_gemini.py  verify_date_injection.py  verify_final_prompt.py  verify_google_update.py  verify_groq_compound.py  verify_localization.py  verify_model_selection_flow.py
